# snusmic-quant-terminal

./: .gitignore  .pre-commit-config.yaml  .vercelignore  README.md  pyproject.toml  vercel.json
.github/: branch-protection.yml
.github/workflows/: atomic-rehoming.yml  budget-check.yml  bundle-size.yml  ci.yml  keepalive.yml  pages.yml  phase-2-comms-gate.yml  phase-2-xfail-transition.yml  price-refresh.yml  sync.yml
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
data/: extracted_reports.csv  extraction_quality.json  manifest.json  portfolio_backtests.json  price_metrics.json
data/markdown/: 2020-10-31_equity-research-이지바이오.md  2020-12-05_equity-research-bili-bili.md  2020-12-05_equity-research-chewy.md  2021-04-15_10537-2.md  (+212 more)
scripts/: check_schema_compat.py  check_vercel_alias.py  export_schemas.py  prepare_quarto_site.py
tests/: test_backtest_integration.py  test_backtest_v3.py  test_change_detection.py  test_currency.py  test_delisting.py  test_determinism.py  test_download_pdfs.py  test_dry_run_isolation.py  test_extract_pdf.py  test_extraction_quality.py  test_fetch_index.py  test_incremental_refresh.py  test_leading_zero_preservation.py  test_lookahead_property.py  test_markdown_export.py  test_opendataloader_fallback.py  test_optuna_resumability.py  test_perf_regression.py  test_phase_2_critical_fixes.py  test_portfolio_backtests_schema.py  test_price_metrics_schema.py  test_quant.py  test_report_rows.py  test_schema_roundtrip.py  test_sheet_sync.py  test_vercel_alias_guard.py  test_write_validation.py
(+319 files in other folders)
